Fix: Text Overflow

--- a/web/static/css/template.css
+++ b/web/static/css/template.css
@@ -160,6 +160,7 @@ body,
 .wrapper {
   min-height: 100vh;
   position: relative;
+  overflow-wrap: break-word;
 }
 
 a {
@@ -463,7 +464,7 @@ input:focus {
 }*/
 .sidebar .nav li > a {
   color: #FFFFFF;
-  margin: 5px 15px;
+  margin: 5px 10px;
   opacity: .86;
   border-radius: 4px;
 }
